Added update, delete routes and templates for it. Small refactoring code. Added login as guest rout.

--- a/country_app/templates/auth.html
+++ b/country_app/templates/auth.html
@@ -9,7 +9,7 @@
     <div class="reg_form">
       <nav>
         <ul>
-          <li><a href="{{ url_for('auth.login') }}">Login as guest</a>
+          <li><a href="{{ url_for('auth.login_as_guest') }}">Login as guest</a>
         </ul>
       </nav>
       <div class="content">
