--- a/country_app/templates/create.html
+++ b/country_app/templates/create.html
@@ -1,5 +1,5 @@
 
-{% extends 'country_city_index.html' %}
+{% extends 'country_city_base.html' %}
  
   {% block create %}
     <div class="content">
