--- a/country_app/templates/create.html
+++ b/country_app/templates/create.html
@@ -8,7 +8,12 @@
         <input name="name" id="name" value="{{ request.form['name'] }}" required>
         <label for="description">Description</label>
         <textarea name="description" id="description">{{ request.form['description'] }}</textarea>
-        <input type="submit" value="Save">
+        <span>
+          <input type="submit" value="Save" class="btn btn-default">
+          <a href="{{url_for('country_city.index',
+            id_country=g.active_country_id)}}"
+             class="btn btn-default">Cancel</a>
+        </span>
       </form>
     </div>
   {% endblock %}
