--- a/country_app/static/style.css
+++ b/country_app/static/style.css
@@ -11,7 +11,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
-  color: #377ba8;
+  color: #2F4F4F;
   margin: 1rem 0;
 }
 
@@ -54,7 +54,11 @@ nav ul li a, nav ul li span, header .action {
 }
 
 .active {
-  background:#B0C4DE;
+  background:#708090;
+  color: white;
+}
+
+.active h4, .active h5 {
   color: white;
 }
 
@@ -65,11 +69,16 @@ nav ul li a, nav ul li span, header .action {
 .tabs a {
   text-decoration: none;
 }
+.tabs li {
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
 
 .data_tab {
   border: 1px solid darkgray;
   margin-top: 2px;
   margin-bottom: 2px;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
 .color_gray {
@@ -87,6 +96,8 @@ nav ul li a, nav ul li span, header .action {
 
 .content {
   padding: 0 1rem 1rem;
+  border: 1px solid darkgray;
+  background: #DCDCDC;
 }
 
 .content > header {
